fix CORS (this is the patch of the year)